--- a/frontend-angular/src/styles.scss
+++ b/frontend-angular/src/styles.scss
@@ -8,3 +8,46 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+:host {
+  width: 100%;
+  padding: 1rem;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: darkcyan;
+
+}
+
+ngb-carousel {
+  margin: 0 auto;
+}
+
+
+.carousel-item {
+  min-height: 300px; // Augmentez cette valeur si nécessaire
+  background-color: #f0f0f0; // Une couleur de fond claire pour le contraste
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  box-sizing: border-box;
+  border: 1px solid #ddd; // Pour délimiter visuellement chaque slide
+}
+
+.carousel-item h4 {
+  font-size: 1.5rem;
+  color: #333;
+  margin-bottom: 0.5rem;
+}
+
+.carousel-item p {
+  font-size: 1rem;
+  color: #555;
+  margin-bottom: 0.5rem;
+}
+
+.btn-danger {
+  margin-top: 1rem;
+}
