--- a/frontend-angular/src/app/carousel/carousel.component.scss
+++ b/frontend-angular/src/app/carousel/carousel.component.scss
@@ -1,3 +1,57 @@
-ngb-carousel {
-  background-color: black;
+.custom-carousel {
+  // Par exemple, pour personnaliser l’arrière-plan global du carousel
+  background-color: #f0f4f8;
+  padding: 1rem;
+}
+
+.carousel-item {
+  background-color: #4fc698;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  color: #ffffff;
+  padding: 16px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Header : titre en gros, couleur de fond personnalisée */
+.carousel-header {
+  min-height: 7rem;
+  background-color: #ef430e;
+  padding: 8px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  color: #ffffff;
+  font-size: 1.2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+/* Corps : zone flexible pour centrer verticalement le contenu */
+.carousel-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 1rem 0;
+}
+
+/* Footer : zone avec couleur de fond pour le bouton */
+.carousel-footer {
+  background-color: #ef430e;
+  padding: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+/* Bouton personnalisé */
+.custom-button {
+  width: 100%;
 }
