fonction edit et admin

--- a/frontend-angular/src/app/app.component.html
+++ b/frontend-angular/src/app/app.component.html
@@ -11,7 +11,7 @@
         (click)="logout()">
       </button>
     </div>
-    <app-add-assignment-modal></app-add-assignment-modal>
+    <app-add-assignment-modal *ngIf="authService.isAdmin()" ></app-add-assignment-modal>
     <app-carousel></app-carousel>
   </div>
 </main>
