--- a/frontend-angular/src/app/register-modal/register-modal.component.html
+++ b/frontend-angular/src/app/register-modal/register-modal.component.html
@@ -14,6 +14,10 @@
         <input id="confirmPassword" type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required class="p-inputtext" />
       </div>
       <div class="p-field">
+        <p-checkbox name="isAdmin" [(ngModel)]="isAdmin" binary="true"></p-checkbox>
+        <label for="isAdmin">Admin</label>
+      </div>
+      <div class="p-field" style="margin-top: 1rem;">
         <button type="submit" pButton label="S'inscrire" class="p-mr-2"></button>
         <button type="button" pButton label="Annuler" (click)="hide()" class="p-button-secondary"></button>
       </div>
