--- a/frontend-angular/src/app/add-assignment-modal/add-assignment-modal.component.html
+++ b/frontend-angular/src/app/add-assignment-modal/add-assignment-modal.component.html
@@ -14,22 +14,27 @@
         <label>Industry</label>
         <input type="text" class="form-control" [(ngModel)]="assignment.stock_industry" name="industry">
       </div>
+
       <div class="form-group">
-        <label>Sector</label>
-        <input type="text" class="form-control" [(ngModel)]="assignment.stock_sector" name="sector">
+        <label>Date</label>
+        <input type="date" class="form-control" [(ngModel)]="assignment.date" name="date">
       </div>
+
       <div class="form-group">
-        <label>Market Cap</label>
-        <input type="text" class="form-control" [(ngModel)]="assignment.stock_market_cap" name="marketCap">
+        <label>Nombre</label>
+        <input type="number" class="form-control" [(ngModel)]="assignment.nombre" name="nombre">
       </div>
+
       <div class="form-group">
         <label>Department</label>
         <input type="text" class="form-control" [(ngModel)]="assignment.department" name="department">
       </div>
+
       <div class="form-group">
-        <label>Address</label>
-        <input type="text" class="form-control" [(ngModel)]="assignment.address" name="address">
+        <label>Terminé</label>
+        <input type="checkbox" class="form-control" [(ngModel)]="assignment.termine" name="termine">
       </div>
+
     </form>
   </div>
   <div class="modal-footer">
