--- a/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.html
+++ b/frontend-angular/src/app/edit-assignment-modal/edit-assignment-modal.component.html
@@ -2,8 +2,8 @@
   <form (ngSubmit)="onSubmit()">
     <div class="p-fluid">
       <div class="p-field">
-        <label for="stock_industry">Industry</label>
-        <input id="stock_industry" type="text" [(ngModel)]="assignmentCopy.stock_industry" name="stock_industry" required class="p-inputtext" />
+        <label for="name">Industry</label>
+        <input id="name" type="text" [(ngModel)]="assignmentCopy.name" name="Name" required class="p-inputtext" />
       </div>
       <!-- Nouveau champ Date -->
       <div class="p-field">
