--- a/frontend-angular/src/app/filter/filter.component.html
+++ b/frontend-angular/src/app/filter/filter.component.html
@@ -1,8 +1,8 @@
 <div class="filter-container">
   <form (ngSubmit)="onFilterChange()" class="filter-form">
     <div class="p-field">
-      <label for="industry">Industrie :</label>
-      <input type="text" id="industry" [(ngModel)]="criteria.stock_industry" name="industry" placeholder="Filtrer par industrie" (input)="onFilterChange()">
+      <label for="name">Name :</label>
+      <input type="text" id="name" [(ngModel)]="criteria.name" name="industry" placeholder="Filtrer par industrie" (input)="onFilterChange()">
     </div>
     <div class="p-field">
       <label for="date">Date :</label>
