--- a/frontend-angular/src/app/login-component/login-component.component.scss
+++ b/frontend-angular/src/app/login-component/login-component.component.scss
@@ -4,7 +4,11 @@
   justify-content: center;
   flex-direction: column;
   height: 98%;
-    background: #4fc698;
+  background: #4fc698;
+  width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 form {
