--- a/frontend-angular/src/app/register-modal/register-modal.component.html
+++ b/frontend-angular/src/app/register-modal/register-modal.component.html
@@ -1,25 +1,25 @@
 <p-dialog header="Créer un compte" [(visible)]="display" [modal]="true" [closable]="false" [style]="{'width': '30vw'}">
   <form (ngSubmit)="onSubmit()">
     <div class="p-fluid">
-      <div class="p-field">
+      <div class="p-field pt-2">
         <label for="regEmail">Email</label>
         <input id="regEmail" type="email" [(ngModel)]="email" name="email" required class="p-inputtext" />
       </div>
-      <div class="p-field">
+      <div class="p-field pt-2">
         <label for="regPassword">Mot de passe</label>
         <input id="regPassword" type="password" [(ngModel)]="password" name="password" required class="p-inputtext" />
       </div>
-      <div class="p-field">
+      <div class="p-field pt-2">
         <label for="confirmPassword">Confirmer le mot de passe</label>
         <input id="confirmPassword" type="password" [(ngModel)]="confirmPassword" name="confirmPassword" required class="p-inputtext" />
       </div>
-      <div class="p-field">
-        <p-checkbox name="isAdmin" [(ngModel)]="isAdmin" binary="true"></p-checkbox>
-        <label for="isAdmin">Admin</label>
+      <div class="p-field pt-3">
+        <p-checkbox name="isAdmin" [(ngModel)]="isAdmin" binary="true" ></p-checkbox>
+        <label  for="isAdmin">Admin</label>
       </div>
       <div class="p-field" style="margin-top: 1rem;">
-        <button type="submit" pButton label="S'inscrire" class="p-mr-2"></button>
-        <button type="button" pButton label="Annuler" (click)="hide()" class="p-button-secondary"></button>
+        <button type="submit" pButton label="S'inscrire" class="pt-mr-2"></button>
+        <button type="button" pButton label="Annuler" (click)="hide()" class="p-button-secondary "></button>
       </div>
       <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
       <div *ngIf="successMessage" class="success">{{ successMessage }}</div>
