--- a/frontend-angular/src/app/add-assignment-modal/add-assignment-modal.component.html
+++ b/frontend-angular/src/app/add-assignment-modal/add-assignment-modal.component.html
@@ -11,8 +11,8 @@
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label>Industry</label>
-        <input type="text" class="form-control" [(ngModel)]="assignment.stock_industry" name="industry">
+        <label>Name</label>
+        <input type="text" class="form-control" [(ngModel)]="assignment.name" name="industry">
       </div>
 
       <div class="form-group">
