--- a/frontend-angular/src/app/carousel/carousel.component.html
+++ b/frontend-angular/src/app/carousel/carousel.component.html
@@ -1,23 +1,20 @@
 <app-filter (filterChange)="applyFilter($event)"></app-filter>
 <p-carousel
   [value]="filteredAssignments"
-  [numVisible]="4"
-  [numScroll]="1"
+  [numVisible]="5"
+  [numScroll]="5"
   [circular]="true"
   verticalViewPortHeight="360px">
   <ng-template let-assignment pTemplate="item">
     <div class="border-1 surface-border border-round m-2 p-3">
       <div class="mb-3 carousel-item">
         <div class="carousel-header">
-          <h4>{{ assignment.stock_industry }}</h4>
+          <h4>{{ assignment.name }}</h4>
         </div>
         <div class="carousel-body">
-          <!-- Affichage de la date formatée -->
           <p class="item-info">Date: {{ assignment.date | date:'shortDate' }}</p>
           <p class="item-info">Department: {{ assignment.department }}</p>
-          <!-- Affichage du nombre -->
           <p class="item-info">Nombre: {{ assignment.nombre }}</p>
-          <!-- Affichage du statut terminé -->
           <p class="item-info">Statut: {{ assignment.termine ? 'Terminé' : 'Non terminé' }}</p>
         </div>
         <button *ngIf="authService.isAdmin()"
