--- a/frontend-angular/src/app/app.component.scss
+++ b/frontend-angular/src/app/app.component.scss
@@ -1,3 +1,13 @@
-.btn{
-  margin: 0.1rem;
+/* Contenu principal quand l'utilisateur est connecté */
+.main {
+  transition: margin-left 0.3s ease;
+  padding: 20px;
+}
+
+/* Conteneur centré pour la page de connexion */
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Occupe toute la hauteur de la fenêtre */
 }
