--- a/frontend-angular/src/app/side-navigation/side-navigation.component.html
+++ b/frontend-angular/src/app/side-navigation/side-navigation.component.html
@@ -1,35 +1,33 @@
 <nav class="side-nav" [class.collapsed]="isCollapsed">
-
-
   <ul class="list-unstyled">
 
     <li class="mb-2">
-      <button (click)="toggleCollapse()" class="btn btn-secondary mb-3">
-        <i class="bi" [ngClass]="{'bi-chevron-right': isCollapsed, 'bi-chevron-left': !isCollapsed}"></i>
+      <button (click)="toggleCollapse()" class="btn btn-secondary w-100">
+        <ng-container *ngIf="isCollapsed; else expandedIcon">
+          <img ngSrc="assets/collapse-right-svgrepo-com.svg" alt="Étendre" width="20" height="20">
+        </ng-container>
+        <ng-template #expandedIcon>
+          <img ngSrc="assets/collapse-left-svgrepo-com.svg" alt="Réduire" width="20" height="20">
+        </ng-template>
         <span *ngIf="!isCollapsed">
-      {{ isCollapsed ? 'Étendre' : 'Réduire' }}
-    </span>
+          {{ isCollapsed ? 'Étendre' : 'Réduire' }}
+        </span>
       </button>
     </li>
 
     <li class="mb-2">
-      <button
-        pButton
-        icon="pi pi-sign-out"
-        [label]="!isCollapsed ? 'Déconnexion' : ''"
-        (click)="logout()"
-        class="btn btn-danger w-100">
+      <button (click)="logout()" class="btn btn-danger w-100">
+        <img ngSrc="assets/logout-svgrepo-com.svg" alt="Déconnexion" width="20" height="20">
+        <span *ngIf="!isCollapsed">Déconnexion</span>
       </button>
     </li>
 
-    <!-- Bouton Ajouter un Assignment (affiché uniquement pour les admins) -->
-    <li  class="mb-2" *ngIf="authService.isAdmin()">
-      <button
-        pButton
-        [label]="!isCollapsed ? 'Ajouter un Assignment' : ''"
-        (click)="openAddAssignmentModal()"
-        class="btn btn-success w-100 2-circle-fill">
+    <li class="mb-2" *ngIf="authService.isAdmin()">
+      <button (click)="openAddAssignmentModal()" class="btn btn-success w-100">
+        <img ngSrc="assets/add-square-svgrepo-com.svg" alt="Ajouter un Assignment" width="20" height="20">
+        <span *ngIf="!isCollapsed">Ajouter un Assignment</span>
       </button>
     </li>
+
   </ul>
 </nav>
