--- a/frontend-angular/src/styles.scss
+++ b/frontend-angular/src/styles.scss
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
@@ -24,3 +21,15 @@ body {
   margin-bottom: 1rem;
 }
 
+.p-carousel-prev,
+.p-carousel-next {
+  background-color: #ef430e;
+  color: #ffffff ;
+  border: none ;
+  border-radius: 50% ;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
