--- a/frontend-angular/src/app/register-modal/register-modal.component.html
+++ b/frontend-angular/src/app/register-modal/register-modal.component.html
@@ -2,7 +2,7 @@
   <form (ngSubmit)="onSubmit()">
     <div class="p-fluid">
       <div class="p-field pt-2">
-        <label for="regEmail">Email</label>
+        <label for="regEmail">User Name</label>
         <input id="regEmail" type="email" [(ngModel)]="email" name="email" required class="p-inputtext" />
       </div>
       <div class="p-field pt-2">
