--- a/frontend-angular/src/app/add-assignment-modal/add-assignment-modal.component.html
+++ b/frontend-angular/src/app/add-assignment-modal/add-assignment-modal.component.html
@@ -1,4 +1,3 @@
-<!-- add-assignment-modal.component.html -->
 <div class="modal-header">
   <h4 class="modal-title">Ajouter un Assignment</h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
@@ -9,7 +8,7 @@
   <form>
     <div class="form-group">
       <label>Name</label>
-      <input type="text" class="form-control" [(ngModel)]="assignment.name" name="industry">
+      <input type="text" class="form-control" [(ngModel)]="assignment.name" name="Name">
     </div>
 
     <div class="form-group">
@@ -27,9 +26,9 @@
       <input type="text" class="form-control" [(ngModel)]="assignment.department" name="department">
     </div>
 
-    <div class="form-group">
+    <div class="form-group ">
       <label>Terminé</label>
-      <input type="checkbox" class="form-control" [(ngModel)]="assignment.termine" name="termine">
+      <p-checkbox inputId="termine" class="form-control" [(ngModel)]="assignment.termine" binary="true" name="termine"></p-checkbox>
     </div>
   </form>
 </div>
