--- a/frontend-angular/src/app/filter/filter.component.scss
+++ b/frontend-angular/src/app/filter/filter.component.scss
@@ -1,4 +1,3 @@
-/* Exemple de CSS pour aligner les champs avec Flexbox */
 .p-field {
   display: flex;
   align-items: center;
@@ -15,9 +14,7 @@
 }
 
 .filter-container{
-  padding: 2rem;
-  padding-left: 20rem;
-  padding-right: 20rem;
+  padding: 2rem 20rem;
   border: 1px solid #ccc;
   border-radius: 8px;
   margin-bottom: 1rem;
