--- a/frontend-angular/src/app/login-component/login-component.component.html
+++ b/frontend-angular/src/app/login-component/login-component.component.html
@@ -2,7 +2,7 @@
 <h2>User Login</h2>
   <form (ngSubmit)="onSubmit()">
     <div>
-      <input placeholder="Email Id"  type="email" id="email" [(ngModel)]="email" name="email" required>
+      <input placeholder="User Name"  type="email" id="email" [(ngModel)]="email" name="email" required>
     </div>
     <div>
       <input placeholder="Password" type="password" id="password" [(ngModel)]="password" name="password" required>
