--- a/frontend-angular/src/app/side-navigation/side-navigation.component.html
+++ b/frontend-angular/src/app/side-navigation/side-navigation.component.html
@@ -29,5 +29,10 @@
       </button>
     </li>
 
+    <li class="mb-2" *ngIf="authService.isAdmin()">
+
+      <app-import-assignment></app-import-assignment>
+    </li>
+
   </ul>
 </nav>
